feat: wallpaperId 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>평생학습의 장터, 학습장</title>
+    <title>쿠키하우스 서버</title>
 </head>
 <body>
-<h1>제발 되어라</h1>
+<h1>쿠키하우스 서버에 오신 것을 환영합니다</h1>
 </body>
 </html>
